--- a/AngularMvcProject/Content/Assets/css/custom.css
+++ b/AngularMvcProject/Content/Assets/css/custom.css
@@ -2368,7 +2368,7 @@ table#mytable tr td {
     list-style: none;
     margin: 0;
     padding: 0;
-    height: 600px;
+    height: 500px;
     overflow: auto;
 }
 .categoryList {
@@ -3200,12 +3200,12 @@ ul.dashboardNtfList {
 }
 h3.serviceProText {
     display: inline-block;
-    margin-top: 20px !important;
+    margin-top: 5px !important;
     margin-bottom: 10px !important;
 }
 .timeOffPlusBtn {
     padding: 4px 9px;
-    margin-top: 18px;
+    margin-top: 5px;
 }
 /*.addstaffBtn {
   padding: 7px 9px;  
@@ -3642,9 +3642,13 @@ form.form-horizontal.imageUploadForm .form-group.appointaploadDiv {
 }
 
 .serviceProvideSec {
-    overflow: auto;
-    height: 600px;
+    /*overflow: auto;*/
+    height: 450px;
 }
+.staffServices {
+    width: 104%;
+}
+
 /* 5-July-2017 css end  here     */
 
 /* media css start here ================================= */
